Enable SSR and update Nuxt configuration for improved SEO and social sharing. Replace `serve` with `@iconify-json/material-symbols` in dev dependencies.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
   },
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.87",
-    "serve": "^14.2.5"
+    "@iconify-json/material-symbols": "^1.2.53"
   }
 }
